.playwright-mcp/console-2026-05-13T16-04-41-947Z.log
[      20ms] [INFO] %cDownload the React DevTools for a better development experience: https://reactjs.org/link/react-devtools font-weight:bold @ https://unpkg.com/react-dom@18.3.1/umd/react-dom.development.js:29904
[      78ms] [WARNING] Failed to decode downloaded font: https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/variable/pretendardvariable-dynamic-subset.min.css @ http://localhost:8080/web/index.html:62
[      79ms] [WARNING] OTS parsing error: invalid sfntVersion: 791292426 @ http://localhost:8080/web/index.html:62
[      89ms] [WARNING] You are using the in-browser Babel transformer. Be sure to precompile your scripts for production - https://babeljs.io/docs/setup/ @ https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:2
[     219ms] SyntaxError: /http:/localhost:8080/web/components/screens-game.jsx: Unexpected token (343:12)

  341 |
  342 | Object.assign(window, { GameScreen });
> 343 |  GameScreen });
      |             ^
  344 |
    at e (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:260002)
    at r.raise (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:312098)
    at r.unexpected (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:312532)
    at r.parseExprAtom (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:485195)
    at r.parseExprAtom (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:353993)
    at r.parseExprSubscripts (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:477958)
    at r.parseUpdate (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:477579)
    at r.parseMaybeUnary (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:477193)
    at r.parseMaybeUnaryOrPrivate (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:473986)
    at r.parseExprOps (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:474096)
    at r.parseMaybeConditional (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:473566)
    at r.parseMaybeAssign (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:472472)
    at r.parseMaybeAssign (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:393896)
    at r.parseExpressionBase (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:471593)
    at https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:471500
    at r.allowInAnd (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:505219)
    at r.parseExpression (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:471469)
    at r.parseStatementContent (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:514125)
    at r.parseStatementLike (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:511686)
    at r.parseStatementLike (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:379262)
    at r.parseModuleItem (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:511181)
    at r.parseBlockOrModuleBlockBody (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:523506)
    at r.parseBlockBody (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:523339)
    at r.parseProgram (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:508590)
    at r.parseTopLevel (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:507296)
    at r.parseTopLevel (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:397777)
    at r.parse (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:550298)
    at aR (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:550496)
    at https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1117838
    at Generator.<anonymous> (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1068)
    at Generator.next (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1898)
    at Generator.<anonymous> (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:826)
    at Generator.next (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1898)
    at Generator.<anonymous> (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:826)
    at Generator.next (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1898)
    at Generator.<anonymous> (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:826)
    at Generator.next (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1898)
    at iF (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:945723)
    at sync (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:943814)
    at stopHiding - secret - don't use this - v1 (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1069523)
    at SV (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:1126275)
    at FEe (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3132179)
    at https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3127986
    at SEe (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3128384)
    at n (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3128645)
    at a (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3129038)
    at d.src.i.onreadystatechange (https://unpkg.com/@babel/standalone@7.29.0/babel.min.js:3:3129295)
